--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-09-24 Sat 10:52 -->
+<!-- 2022-09-24 Sat 11:02 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Lalala Index</title>
@@ -275,6 +275,11 @@
 <p>
 This is index file.
 </p>
+
+<ul class="org-ul">
+<li><a href="https://detexify.kirelabs.org/classify.html">https://detexify.kirelabs.org/classify.html</a></li>
+<li><a href="https://www.cmor-faculty.rice.edu/~heinken/latex/symbols.pdf">https://www.cmor-faculty.rice.edu/~heinken/latex/symbols.pdf</a></li>
+</ul>
 
 <div id="outline-container-orgd910738" class="outline-2">
 <h2 id="orgd910738"><span class="section-number-2">1.</span> 文章列表</h2>
