--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-25 23:10 -->
+<!-- 2022-09-26 16:51 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -33,6 +33,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML"></script>
 </head>
 <body>
+<div id="preamble" class="status">
+<nav class="org-center">
+<a href="index.html">Home</a>
+</nav>
+</div>
 <div id="content" class="content">
 <header>
 <h1 class="title">小渴栈</h1>
@@ -41,13 +46,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3d4eb5a">1. 文章列表</a></li>
+<li><a href="#orgb8de3d8">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
 <ul class="org-ul">
 <li class="off">&#x2610; <a href="https://detexify.kirelabs.org/classify.html">https://detexify.kirelabs.org/classify.html</a></li>
 <li class="on">&#x2611; <a href="https://www.cmor-faculty.rice.edu/~heinken/latex/symbols.pdf">https://www.cmor-faculty.rice.edu/~heinken/latex/symbols.pdf</a></li>
+
+<li><a href="https://taingram.org/blog/org-mode-blog.html">Building a Emacs Org-Mode Blog</a></li>
 </ul>
 
 <p>
@@ -63,6 +70,16 @@ constraint \(pt(y) = pt(x)\) instead of \(pt(y) \subseteq pt(x)\)</li>
 This is center.
 </p>
 </div>
+
+
+<figure id="orge63640b">
+<img src="./img/avatar.jpg" alt="avatar.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
+
+</figure>
+
+<p>
+Today is <span class="timestamp-wrapper"><span class="timestamp">&lt;2022-09-26 Mon&gt;</span></span>, and <span class="timestamp-wrapper"><span class="timestamp">&lt;2022-09-26 Mon 10:59&gt;</span></span>.
+</p>
 
 <p>
 There is another form of context sensitivity
@@ -80,18 +97,13 @@ affects the scalability of the equality-based approach.
 </p>
 </blockquote>
 
-<div id="outline-container-org3d4eb5a" class="outline-2">
-<h2 id="org3d4eb5a"><span class="section-number-2">1.</span> <a href="#org3d4eb5a">文章列表</a></h2>
+<div id="outline-container-orgb8de3d8" class="outline-2">
+<h2 id="orgb8de3d8"><span class="section-number-2">1.</span> <a href="#orgb8de3d8">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
+<li><a href="blog.html">EServer Static 诞生记</a></li>
 <li><a href="context-tunneling.html">Context Tunneling</a></li>
-<li><a href="index.html">EServer, but Static</a></li>
-<li><a href="setup.html">setup</a></li>
-<li><a href="setup-0.html">setup-0</a></li>
-<li><a href="setup-1.html">setup-1</a></li>
-<li><a href="setup-2.html">setup-2</a></li>
-<li><a href="setup-3.html">setup-3</a></li>
-<li><a href="setup-4.html">setup-4</a></li>
+<li><a href="index.html">小渴栈</a></li>
 <li>sa
 <ul class="org-ul">
 <li><a href="sa/pta.html">Pointer Analysis</a></li>
@@ -104,10 +116,10 @@ affects the scalability of the equality-based approach.
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-25 23:01</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-25 23:10</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-26 16:17</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-26 16:51</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
-  <tr><td class="org-right">Raw</td><td class="org-left">index.org</td></tr>
+  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
 </div>
 </body>
