Update from https://github.com/thebesttv/ex-action/commit/03955de42c4dbd22ae9a9f548ebf4908f4b60f6c

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-26 17:08 -->
+<!-- 2022-09-27 12:46 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -20,27 +20,6 @@
 
   gtag('config', 'G-06N8YBQEG3');
 </script>
-<script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-        displayAlign: "center",
-        displayIndent: "0em",
-
-        "HTML-CSS": { scale: 100,
-                        linebreaks: { automatic: "false" },
-                        webFont: "TeX"
-                       },
-        SVG: {scale: 100,
-              linebreaks: { automatic: "false" },
-              font: "TeX"},
-        NativeMML: {scale: 100},
-        TeX: { equationNumbers: {autoNumber: "AMS"},
-               MultLineWidth: "85%",
-               TagSide: "right",
-               TagIndent: ".8em"
-             }
-});
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML"></script>
 </head>
 <body>
 <div id="preamble" class="status">
@@ -56,71 +35,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org22f48c6">1. 文章列表</a></li>
+<li><a href="#org533dd29">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
-<ul class="org-ul">
-<li class="off">&#x2610; <a href="https://detexify.kirelabs.org/classify.html">https://detexify.kirelabs.org/classify.html</a></li>
-<li class="on">&#x2611; <a href="https://www.cmor-faculty.rice.edu/~heinken/latex/symbols.pdf">https://www.cmor-faculty.rice.edu/~heinken/latex/symbols.pdf</a></li>
-
-<li><a href="https://taingram.org/blog/org-mode-blog.html">Building a Emacs Org-Mode Blog</a></li>
-</ul>
-
+<hr style="width: 80%;">
 <p>
-There is another form of context sensitivity
-</p>
-<ul class="org-ul">
-<li>based on equality constraints: assignment <code>x = y</code> is modeled with
-constraint \(pt(y) = pt(x)\) instead of \(pt(y) \subseteq pt(x)\)</li>
-</ul>
-
-<div class="org-center">
-<p>
-This is center.
+之前的 EServer 是直接运行在 Emacs 上的, 有点怕出问题, 所以还是想弄一个静
+态的放到 GitHub Pages, 这样也省心.
 </p>
 
-<p>
-<code>abc</code>
-</p>
-</div>
-
-
-<figure id="orgc68ad60">
-<img src="./img/avatar.jpg" alt="avatar.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
-
-</figure>
-
-<p>
-Today is <span class="timestamp-wrapper"><span class="timestamp">&lt;2022-09-26 Mon&gt;</span></span>, and <span class="timestamp-wrapper"><span class="timestamp">&lt;2022-09-26 Mon 10:59&gt;</span></span>.
-</p>
-
-<p>
-There is another form of context sensitivity
-</p>
-<ul class="org-ul">
-<li>based on equality constraints: assignment <code>x = y</code> is modeled with
-constraint \(pt(y) = pt(x)\) instead of \(pt(y) \subseteq pt(x)\)</li>
-</ul>
-<blockquote>
-<p>
-While this approach has been shown to scale for C++ programs, we are
-unaware of a scalable implementation for Java-like languages. In
-particular, the increased use of virtual dispatch in Java negatively
-affects the scalability of the equality-based approach.
-</p>
-</blockquote>
-
-<div id="outline-container-org22f48c6" class="outline-2">
-<h2 id="org22f48c6"><span class="section-number-2">1.</span> <a href="#org22f48c6">文章列表</a></h2>
+<div id="outline-container-org533dd29" class="outline-2">
+<h2 id="org533dd29"><span class="section-number-2">1.</span> <a href="#org533dd29">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
-<li><a href="blog.html">EServer Static 诞生记</a></li>
-<li><a href="context-tunneling.html">Context Tunneling</a></li>
 <li><a href="index.html">小渴栈</a></li>
-<li>sa
+<li>content
 <ul class="org-ul">
-<li><a href="sa/pta.html">Pointer Analysis</a></li>
+<li><a href="content/blog.html">EServer Static 诞生记</a></li>
+<li><a href="content/example.html">Org-mode Examples</a></li>
+<li><a href="content/context-tunneling.html">Context Tunneling</a></li>
 </ul></li>
 </ul>
 </div>
@@ -130,8 +64,8 @@ affects the scalability of the equality-based approach.
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-26 16:57</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-26 17:08</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 12:45</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-27 12:46</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
