Update from https://github.com/thebesttv/ex-action/commit/e47f3db2feec56ccc80f2e8a10c08888aa65c8a5

--- a/content/example.html
+++ b/content/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-27 12:46 -->
+<!-- 2022-09-27 12:53 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org-mode Examples</title>
@@ -55,15 +55,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org15b6ccb">1. Styles</a></li>
-<li><a href="#org5c53085">2. Time &amp; Date</a></li>
-<li><a href="#orgf21e616">3. Symbols</a>
+<li><a href="#org13a3ce9">1. Styles</a></li>
+<li><a href="#org9a75fa2">2. Time &amp; Date</a></li>
+<li><a href="#org2068d6a">3. Symbols</a>
 <ul>
-<li><a href="#orgd4cc959">3.1. Org Symbols</a></li>
-<li><a href="#orgb77b5ef">3.2. MathJax/LaTeX Symbols</a></li>
+<li><a href="#orgb0b0f72">3.1. Org Symbols</a></li>
+<li><a href="#org5f91935">3.2. MathJax/LaTeX Symbols</a></li>
 </ul>
 </li>
-<li><a href="#orgfeb1449">4. Bibliography</a></li>
+<li><a href="#org04e0aa5">4. Bibliography</a></li>
 </ul>
 </div>
 </nav>
@@ -72,8 +72,8 @@
 <li><a href="https://taingram.org/blog/org-mode-blog.html">Building a Emacs Org-Mode Blog</a></li>
 </ul>
 
-<div id="outline-container-org15b6ccb" class="outline-2">
-<h2 id="org15b6ccb"><span class="section-number-2">1.</span> <a href="#org15b6ccb">Styles</a></h2>
+<div id="outline-container-org13a3ce9" class="outline-2">
+<h2 id="org13a3ce9"><span class="section-number-2">1.</span> <a href="#org13a3ce9">Styles</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Lists, inline code, and formulas:
@@ -131,20 +131,20 @@ Verse:
 </p>
 
 <p>
-Image, see Fig. <a href="#org6fd7e41">1</a>.
+Image, see Fig. <a href="#org2fa951a">1</a>.
 </p>
 
-<figure id="org6fd7e41">
+<figure id="org2fa951a">
 <img src="./example/avatar.jpg" alt="avatar.jpg" width="20%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>Avatar</figcaption>
 </figure>
 
 <p>
-Table, see Table <a href="#org6ee61bd">1</a>.
+Table, see Table <a href="#org3d94cf9">1</a>.
 </p>
 
-<table id="org6ee61bd" width="nil%" style="margin-left: auto; margin-right: auto;">
+<table id="org3d94cf9" width="nil%" style="margin-left: auto; margin-right: auto;">
 <caption class="t-above"><span class="table-number">Table 1:</span> 数据集概览</caption>
 
 <colgroup>
@@ -203,11 +203,11 @@ Table, see Table <a href="#org6ee61bd">1</a>.
 </table>
 
 <p>
-Code, see Listing <a href="#org871dd8b">1</a>.
+Code, see Listing <a href="#orgbd56720">1</a>.
 </p>
 
 <div class="org-src-container">
-<label class="org-src-name"><span class="listing-number">Listing 1: </span>GCD函数</label><pre class="src src-cpp" id="org871dd8b"><span style="font-weight: bold; text-decoration: underline;">int</span> <span style="font-weight: bold;">gcd</span>(<span style="font-weight: bold; text-decoration: underline;">int</span> <span style="font-weight: bold; font-style: italic;">a</span>, <span style="font-weight: bold; text-decoration: underline;">int</span> <span style="font-weight: bold; font-style: italic;">b</span>) {
+<label class="org-src-name"><span class="listing-number">Listing 1: </span>GCD函数</label><pre class="src src-cpp" id="orgbd56720"><span style="font-weight: bold; text-decoration: underline;">int</span> <span style="font-weight: bold;">gcd</span>(<span style="font-weight: bold; text-decoration: underline;">int</span> <span style="font-weight: bold; font-style: italic;">a</span>, <span style="font-weight: bold; text-decoration: underline;">int</span> <span style="font-weight: bold; font-style: italic;">b</span>) {
   <span style="font-weight: bold;">return</span> b == 0 ? a : gcd(b, a%b);
 }
 </pre>
@@ -227,8 +227,8 @@ Linking to another note, see <a href="blog.html">Blog</a>.
 </div>
 </div>
 
-<div id="outline-container-org5c53085" class="outline-2">
-<h2 id="org5c53085"><span class="section-number-2">2.</span> <a href="#org5c53085">Time &amp; Date</a></h2>
+<div id="outline-container-org9a75fa2" class="outline-2">
+<h2 id="org9a75fa2"><span class="section-number-2">2.</span> <a href="#org9a75fa2">Time &amp; Date</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Today is <span class="timestamp-wrapper"><span class="timestamp">&lt;2022-09-27 Tue&gt;</span></span>, and <span class="timestamp-wrapper"><span class="timestamp">&lt;2022-09-27 Tue 11:29&gt;</span></span>.
@@ -236,12 +236,12 @@ Today is <span class="timestamp-wrapper"><span class="timestamp">&lt;2022-09-27 
 </div>
 </div>
 
-<div id="outline-container-orgf21e616" class="outline-2">
-<h2 id="orgf21e616"><span class="section-number-2">3.</span> <a href="#orgf21e616">Symbols</a></h2>
+<div id="outline-container-org2068d6a" class="outline-2">
+<h2 id="org2068d6a"><span class="section-number-2">3.</span> <a href="#org2068d6a">Symbols</a></h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-orgd4cc959" class="outline-3">
-<h3 id="orgd4cc959"><span class="section-number-3">3.1.</span> <a href="#orgd4cc959">Org Symbols</a></h3>
+<div id="outline-container-orgb0b0f72" class="outline-3">
+<h3 id="orgb0b0f72"><span class="section-number-3">3.1.</span> <a href="#orgb0b0f72">Org Symbols</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 See <a href="https://orgmode.org/worg/org-symbols.html">here</a> for a table of org symbols.
@@ -258,8 +258,8 @@ To use a symbol inside a word, add <code>{}</code> after it, e.g.
 </div>
 </div>
 
-<div id="outline-container-orgb77b5ef" class="outline-3">
-<h3 id="orgb77b5ef"><span class="section-number-3">3.2.</span> <a href="#orgb77b5ef">MathJax/LaTeX Symbols</a></h3>
+<div id="outline-container-org5f91935" class="outline-3">
+<h3 id="org5f91935"><span class="section-number-3">3.2.</span> <a href="#org5f91935">MathJax/LaTeX Symbols</a></h3>
 <div class="outline-text-3" id="text-3-2">
 <ul class="org-ul">
 <li><a href="https://detexify.kirelabs.org/classify.html">Detexify</a> LaTeX handwritten symbol recognition</li>
@@ -269,8 +269,8 @@ To use a symbol inside a word, add <code>{}</code> after it, e.g.
 </div>
 </div>
 
-<div id="outline-container-orgfeb1449" class="outline-2">
-<h2 id="orgfeb1449"><span class="section-number-2">4.</span> <a href="#orgfeb1449">Bibliography</a></h2>
+<div id="outline-container-org04e0aa5" class="outline-2">
+<h2 id="org04e0aa5"><span class="section-number-2">4.</span> <a href="#org04e0aa5">Bibliography</a></h2>
 <div class="outline-text-2" id="text-4">
 <style>.csl-entry{text-indent: -1.5em; margin-left: 1.5em;}</style><div class="csl-bib-body">
   <div class="csl-entry"><a id="citeproc_bib_item_1"></a>Jeon, Minseok, Sehun Jeong, and Hakjoo Oh. 2018. “Precise and Scalable Points-to Analysis via Data-Driven Context Tunneling.” <i>Proceedings of the ACM on Programming Languages</i> 2 (OOPSLA): 140:1–140:29. <a href="https://doi.org/10.1145/3276510">https://doi.org/10.1145/3276510</a>.</div>
@@ -297,8 +297,8 @@ Another footnote.
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-27 11:26</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 12:45</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-27 12:46</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 12:52</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-27 12:53</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/example.org">content/example.org</a></td></tr>
 </table>
