--- a/content/blog.html
+++ b/content/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-27 12:46 -->
+<!-- 2022-09-27 12:53 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>EServer Static 诞生记</title>
@@ -33,11 +33,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org371a6f2">1. ELisp Script</a></li>
-<li><a href="#org9daa571">2. 关于 <code>setup.org</code></a>
+<li><a href="#orgc37f47b">1. ELisp Script</a></li>
+<li><a href="#org63597dc">2. 关于 <code>setup.org</code></a>
 <ul>
-<li><a href="#orgf565b44">2.1. <code>setup-N.org</code></a></li>
-<li><a href="#org86cf846">2.2. 使用 Advice 动态设置 Header</a></li>
+<li><a href="#orgd369996">2.1. <code>setup-N.org</code></a></li>
+<li><a href="#orgecb5c34">2.2. 使用 Advice 动态设置 Header</a></li>
 </ul>
 </li>
 </ul>
@@ -45,8 +45,8 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org371a6f2" class="outline-2">
-<h2 id="org371a6f2"><span class="section-number-2">1.</span> <a href="#org371a6f2">ELisp Script</a></h2>
+<div id="outline-container-orgc37f47b" class="outline-2">
+<h2 id="orgc37f47b"><span class="section-number-2">1.</span> <a href="#orgc37f47b">ELisp Script</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://gist.github.com/ctarbide/99b0ac9f7d6bef19cdd3e9f71b4cbcf7">emacs-script-pitfalls.md</a>
@@ -55,8 +55,8 @@
 </div>
 </div>
 
-<div id="outline-container-org9daa571" class="outline-2">
-<h2 id="org9daa571"><span class="section-number-2">2.</span> <a href="#org9daa571">关于 <code>setup.org</code></a></h2>
+<div id="outline-container-org63597dc" class="outline-2">
+<h2 id="org63597dc"><span class="section-number-2">2.</span> <a href="#org63597dc">关于 <code>setup.org</code></a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 所有文章都需要一些 CSS, org macro 等用来辅助.
@@ -111,8 +111,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgf565b44" class="outline-3">
-<h3 id="orgf565b44"><span class="section-number-3">2.1.</span> <a href="#orgf565b44"><code>setup-N.org</code></a></h3>
+<div id="outline-container-orgd369996" class="outline-3">
+<h3 id="orgd369996"><span class="section-number-3">2.1.</span> <a href="#orgd369996"><code>setup-N.org</code></a></h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 <code>setup-N.org</code> 表示相对根目录在第 N 层的文件所需 include 的内容, 其中
@@ -207,8 +207,8 @@ sed <span style="font-style: italic;">"s|{REPLACE-ME}|${res}|"</span> $<span sty
 </div>
 </div>
 
-<div id="outline-container-org86cf846" class="outline-3">
-<h3 id="org86cf846"><span class="section-number-3">2.2.</span> <a href="#org86cf846">使用 Advice 动态设置 Header</a></h3>
+<div id="outline-container-orgecb5c34" class="outline-3">
+<h3 id="orgecb5c34"><span class="section-number-3">2.2.</span> <a href="#orgecb5c34">使用 Advice 动态设置 Header</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><a href="https://www.gnu.org/software/emacs/manual/html_node/elisp/Advising-Functions.html">ELisp Manual: Advising Emacs Lisp Functions</a></li>
@@ -237,8 +237,8 @@ sed <span style="font-style: italic;">"s|{REPLACE-ME}|${res}|"</span> $<span sty
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 12:45</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-27 12:46</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 12:52</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-27 12:53</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/blog.org">content/blog.org</a></td></tr>
 </table>
