--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-27 12:53 -->
+<!-- 2022-09-27 13:00 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -35,7 +35,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org87d2f26">1. 文章列表</a></li>
+<li><a href="#orge0b2dce">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
@@ -45,8 +45,8 @@
 态的放到 GitHub Pages, 这样也省心.
 </p>
 
-<div id="outline-container-org87d2f26" class="outline-2">
-<h2 id="org87d2f26"><span class="section-number-2">1.</span> <a href="#org87d2f26">文章列表</a></h2>
+<div id="outline-container-orge0b2dce" class="outline-2">
+<h2 id="orge0b2dce"><span class="section-number-2">1.</span> <a href="#orge0b2dce">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="index.html">小渴栈</a></li>
@@ -64,8 +64,8 @@
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 12:52</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-27 12:53</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 12:59</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-27 13:00</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
