--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-27 13:39 -->
+<!-- 2022-09-27 13:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -35,7 +35,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org39717c6">1. 文章列表</a></li>
+<li><a href="#orgc408a47">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
@@ -46,18 +46,18 @@
 </p>
 
 <p>
-用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#orge2fbf17">1</a> 所示.
+用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org58ef761">1</a> 所示.
 </p>
 
 
-<figure id="orge2fbf17">
-<img src="./.diagram.svg" alt=".diagram.svg" class="org-svg" width="90%" style="margin-left: auto; margin-right: auto;">
+<figure id="org58ef761">
+<img src="./diagram.svg" alt="diagram.svg" class="org-svg" width="90%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>博客内容可视化</figcaption>
 </figure>
 
-<div id="outline-container-org39717c6" class="outline-2">
-<h2 id="org39717c6"><span class="section-number-2">1.</span> <a href="#org39717c6">文章列表</a></h2>
+<div id="outline-container-orgc408a47" class="outline-2">
+<h2 id="orgc408a47"><span class="section-number-2">1.</span> <a href="#orgc408a47">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="index.html">小渴栈</a></li>
@@ -69,8 +69,8 @@
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 13:38</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-27 13:39</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 13:45</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-27 13:45</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
